--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dotenv": "^17.2.3",
     "jose": "^5.2.2",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
