--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,6 @@ SEED_TEACHER_EMAIL="teacher@classbland.local"
 SEED_TEACHER_PASSWORD="Teacher123!"
 SEED_STUDENT_EMAIL="student@classbland.local"
 SEED_STUDENT_PASSWORD="Student123!"
+
+
+#Este es un pequeno cambio
