--- a/.env.example
+++ b/.env.example
@@ -28,4 +28,4 @@ SEED_STUDENT_EMAIL="student@classbland.local"
 SEED_STUDENT_PASSWORD="Student123!"
 
 
-#Este es un pequeno cambio
+#Este es un pequeno cambio, 01/26/26
